--- a/focusly-onboarding/src/styles/style.css
+++ b/focusly-onboarding/src/styles/style.css
@@ -2,6 +2,21 @@ body,
 html {
   margin: 0;
   height: 100%;
+  font-family: "IBM Plex Mono";
+}
+
+h1 {
+  font-weight: lighter;
+  font-size: 5cap;
+  padding: 0%;
+  margin: 0;
+  color: #4f46e5;
+}
+
+h2 {
+  font-family: "Caveat", cursive;
+  font-size: 2.5rem;
+  margin-bottom: 1rem;
 }
 
 .l-page {
@@ -36,6 +51,12 @@ html {
   max-width: 250px;
   margin-bottom: 20px;
 }
+.c-lottie--2 {
+  max-width: 20rem;
+  height: 20rem;
+  margin-bottom: 2rem;
+  padding: 0%;
+}
 
 .c-onboarding {
   height: 100%;
@@ -68,12 +89,40 @@ html {
 }
 
 .c-btn {
-  padding: 8px 16px;
-  border-radius: 24px;
+  padding: 0.5rem 1rem;
+  border-radius: 1.5rem;
   border: none;
   background: #4f46e5;
   color: #fff;
   cursor: pointer;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  font-family: "Caveat", cursive;
+  font-size: 1.2rem;
+  z-index: 2;
+}
+.c-btn:hover {
+  transform: scale(1.05);
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+  background: #4039b9;
+}
+.c-btn--start {
+  background: #ee6d22;
+}
+.c-btn--start:hover {
+  background: #9d4816;
+}
+
+.c-overlay__blob {
+  position: absolute;
+  top: -31rem;
+  left: -15rem;
+  width: 600px;
+  transform: rotate(-20deg);
+  z-index: 0;
+}
+
+.c-blob__path {
+  fill: #ee6d22;
 }
 
 .c-progress {
