--- a/focusly-onboarding/src/styles/style.scss
+++ b/focusly-onboarding/src/styles/style.scss
@@ -46,13 +46,13 @@ h2 {
 }
 
 .c-lottie {
-  width: 90%; // iets smaller zodat het mooi past
+  width: 90%;
   max-width: 250px;
   margin-bottom: 20px;
 
   &--2 {
-    max-width: 20rem; // smaller than default
-    height: 20rem; // optioneel, als je ook hoogte wil fixen
+    max-width: 20rem;
+    height: 20rem;
     margin-bottom: 2rem;
     padding: 0%;
   }
